force-app/main/default/objects/HO_Mcp_Guardrail__mdt/HO_Mcp_Guardrail__mdt.object-meta.xml
<CustomObject>
    <label>HO MCPガードレール</label>
    <pluralLabel>HO MCPガードレール</pluralLabel>
    <description>MCPカスタムツールで更新を許可するオブジェクト・項目・件数上限</description>
</CustomObject>