force-app/main/default/objects/HO_Mcp_Guardrail__mdt/fields/Allow_Update__c.field-meta.xml
<CustomField>
    <fullName>Allow_Update__c</fullName>
    <label>更新許可</label>
    <description>falseの場合は参照系ツールのみ利用可</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>