force-app/main/default/objects/HO_Mcp_Guardrail__mdt/fields/Allowed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Fields__c</fullName>
    <label>更新許可項目</label>
    <description>カンマ区切りの項目API名。ここにない項目はプレビュー時点で拒否</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>