force-app/main/default/objects/HO_Mcp_Guardrail__mdt/fields/Max_Records_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>Max_Records_Per_Batch__c</fullName>
    <label>1バッチの最大件数</label>
    <description>1回のプレビュー/適用で扱える最大レコード数</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>