force-app/main/default/objects/HO_Mcp_Guardrail__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>オブジェクトAPI名</label>
    <description>対象オブジェクト</description>
    <type>Text</type>
    <length>80</length>
</CustomField>