force-app/main/default/objects/HO_Mcp_Guardrail__mdt/fields/Workshop_Data_Only__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Data_Only__c</fullName>
    <label>ハンズオンデータのみ</label>
    <description>trueの場合、HO_Workshop_Data__c=true のレコード以外は更新を拒否する</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>